# elenco

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  REAMDME.md  docker-compose.yml  refinery.toml
migrations/: 20201111184058_fix_account.sql  20201111_user.sql  V1__schema.sql
sql/: query_is_ok.sql
sql/delete/: subscription.sql
sql/get/: account.sql  all_categories.sql  all_feeds.sql  all_feeds_by_category_id.sql  categories_by_feed.sql  category_by_id.sql  category_by_name.sql  comment.sql  completion.sql  episode.sql  episodes_for_feed_id.sql  episodes_small_for_feed_id.sql  feed_exists.sql  feed_image.sql  feeds_for_account.sql  last_reviewed_feeds.sql  online_feed_by_id.sql  queued_feeds.sql  search_online_feeds.sql  user_has_subscription.sql  user_is_owner.sql
sql/get/author/: all.sql  by_id.sql
sql/get/category/: all.sql  by_feed_id.sql  by_id.sql  by_name.sql  exist_by_id.sql  exist_by_name.sql  get_id_by_feed_id.sql  sub_by_feed_id.sql
sql/get/feed/: all.sql  by_account.sql  by_author.sql  by_author_id.sql  by_author_name.sql  by_category_id.sql  by_category_name.sql  by_id.sql  by_name.sql  charts.sql  for_profile.sql  id_for_name.sql  last_reviewed.sql  preview_by_id.sql  queued.sql  recent.sql  related.sql  search.sql  search_with_language.sql  search_with_language_category.sql  top_25.sql
sql/get/feed/moderator/: all_waiting_for_review.sql  by_id.sql  get_review.sql  inbox.sql  last_reviewed.sql  queued.sql  reviewed.sql
sql/get/feed/search/: all.sql  with_language.sql  with_language_category.sql
sql/get/feed/user/: submitted.sql  submitter_check.sql  subscription.sql
sql/get/meta/: count_author.sql  count_episode.sql  count_episode_duration.sql  count_feed.sql
sql/insert/: author.sql  category.sql  category_with_parent.sql  comment.sql  episode.sql  feed.sql  img.sql  language.sql  subscription.sql
sql/migrations/: V1__schema.sql  V2__alterDuration.sql  V3__imageTable.sql  V4__fullTextSearch.sql  V5__dropContrainFeed.sql  V5_dropContrainFeed.sql  V6__fixFunctionAuthor.sql  V7__extendEpisode.sql  V8__subscriptions_comments.sql  V9__review_table.sql
sql/update/: assign_for_review.sql  done_review.sql  profile_update_feed.sql  review_feed.sql  user_feed_visibility.sql
src/: api.rs  auth.rs  auth_middleware.rs  db.rs  handler.rs  img_cache.rs  macros.rs  main.rs  model.rs  path.rs  podcast.rs  podcast_util.rs  profile.rs  routes.rs  session.rs  session_storage.rs  socket.rs  template.rs  time_date.rs  util.rs
src/auth/: error.rs  login.rs  mod.rs  register.rs
src/db/: admin.rs  api.rs  category.rs  comment.rs  episode.rs  error.rs  feed.rs  mod.rs  new_feed.rs  new_podcast.rs  preview_error.rs  save_feed.rs  subscription.rs  util.rs
src/handler/: api.rs  auth.rs  author.rs  category.rs  comment.rs  episode.rs  error.rs  feed.rs  feed_detail.rs  feed_preview.rs  general_error.rs  manage.rs  mod.rs  moderator.rs  podcast.rs  preview_error.rs  profile.rs  subscription.rs  user.rs  user_feed.rs
src/handler/api/: author.rs  category.rs  episode.rs  error.rs  feed.rs  mod.rs
src/handler/save_preview_feed/: error.rs  mod.rs  preview.rs  save.rs
src/model/: api.rs  category.rs  channel.rs  episode.rs  feed.rs  item.rs  json.rs  mod.rs  user.rs
src/model/preview/: episode.rs  feed.rs  mod.rs
src/my_middleware/: admin.rs  auth.rs  feed_access.rs  mod.rs  moderator.rs
static/: manage.js  modal-alert.css  script.js  style.css
static/js/: feed-live-update.js  manage.js  player.js  profile.js  review.js  script.js  util.js
templates/: base.html  episode_row.html  error.html  error_msg.html  feed_action_menu.html  feed_form.html  feed_preview.html  login.html  login_form.html  moderator.html  nav.html  profile.html  register.html  register_form.html  register_login.html  register_moderator.html
templates/auth/: login.html  register.html  register_form.html  register_login.html  register_moderator.html
templates/episode/: episode_head.html  episode_row.html
templates/error/: not_found.html
templates/feed/: feed_detail.html  feed_form.html  feed_preview.html  feed_table_row.html
