[package]
name = "elenco"
version = "0.1.0"
authors = ["DominicWrege <dominic.wrege001@stud.fh-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features=["derive"] }
serde_json = "1.0"
actix-web = "4.0.0-beta.6"
rss = "1.10.0"
reqwest = { version= "0.11", features = ["rustls-tls"], default-features = false}
thiserror = "1.0.22"
bcrypt = "0.9.0"
anyhow = "1.0.34"
postgres-types =  { version = "0.2", features=["derive", "serde_json-1"] }
deadpool-postgres = "0.7"
tokio-postgres = { version = "0.7", features=["with-chrono-0_4", "with-serde_json-1"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
actix-session = { git ="https://github.com/nhruo123/actix-extras", rev="b4e8db446843a99b06c7ec40f18ef7b59ee7e955" }
actix-files = { git ="https://github.com/actix/actix-web", rev="a7cd4e85cf75e2cdf6fc54d91ef3c60967e64288" }
actix-web-actors = {git = "https://github.com/actix/actix-web"}
actix-broker = "0.4.0"
actix = "0.11.1"
rand = "0.8"
futures-util = "0.3.9"
email_address = "0.2.0"
url = { version = "2.2.0", features=["serde"] } 
refinery = { version= "0.5.0", features = ["tokio-postgres"] }
env_logger = "0.8.1"
chrono = "0.4.19"
log = "0.4.11"
validator = {version = "0.12", features=["derive"] }
isolang = "1.0.0"
tree_magic_mini = "3.0.0"
mime = "0.3.16"
blake3 = "0.3.7"
envy = "0.4.2"
actix-cors = { git = "https://github.com/nhruo123/actix-extras", rev="b4e8db446843a99b06c7ec40f18ef7b59ee7e955"}

[dependencies.tokio]
version = "1"
features = ["rt", "sync", "time", "macros", "fs"]



