[package]
name = "elenco"
version = "0.1.0"
authors = ["DominicWrege <dominic.wrege001@stud.fh-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features=["derive"] }
serde_json = "1.0"
actix-web = "4.0.0-beta.7"
rss = "1.10.0"
reqwest = { version= "0.11", features = ["rustls-tls", "serde_json"], default-features = false}
thiserror = "1.0.22"
bcrypt = "0.9.0"
anyhow = "1.0.34"
postgres-types =  { version = "0.2", features=["derive", "serde_json-1"] }
deadpool-postgres = "0.8"
tokio-postgres = { version = "0.7", features=["with-chrono-0_4", "with-serde_json-1"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
actix-session = { git ="https://github.com/andy128k/actix-extras", rev="6682fc826fdaa0abe2765c08286ed033edef3d02" }
actix-files = "0.6.0-beta.5"
actix-web-actors = {git = "https://github.com/actix/actix-web"}
actix-broker = "0.4.1"
actix = "0.12"
rand = "0.8"
futures-util = "0.3.9"
email_address = "0.2.0"
url = { version = "2.2.0", features=["serde"] } 
refinery = { version= "0.5.0", features = ["tokio-postgres"] }
env_logger = "0.8.1"
chrono = "0.4.19"
log = "0.4.11"
isolang = "1.0.0"
tree_magic_mini = "3.0.0"
mime =  "0.3.16"
blake3 = "0.3.7"
envy = "0.4.2"
actix-cors = { git = "https://github.com/andy128k/actix-extras", rev="6682fc826fdaa0abe2765c08286ed033edef3d02"}
ammonia = "3.1.1"
http-serde = "1.0.2"
percent-encoding = "2.1.0"
[dependencies.tokio]
version = "1"
features = ["rt", "sync", "time", "macros", "fs"]



